--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ on:
   push:
     branches:
       - main
-#  schedule:
-#    - cron: "0 5 * * 4"
+  schedule: # Schedule for every 10th of a month at 5AM
+    - cron: '0 5 10 * *'
 
 jobs:
 
@@ -27,10 +27,10 @@ jobs:
       - name: Install test dependencies.
         run: pip3 install yamllint ansible ansible-lint
 
-#      - name: Lint code.
-#        run: |
-#          yamllint .
-#          ansible-lint
+      - name: Lint code.
+        run: |
+          yamllint .
+          ansible-lint
 
   integration:
     name: Integration
@@ -55,7 +55,7 @@ jobs:
           sudo rm -rf /Applications/Google\ Chrome.app
           sudo rm -rf /usr/local/bin/firefox
 
-      - name: Install test dependencies.
+      - name: Run bootstrap script.
         run: ./bootstrap.sh
 #        run: |
 #          sudo pip3 install --upgrade pip
@@ -68,13 +68,13 @@ jobs:
 #          cp tests/config.yml ./config.yml
 #          ansible-galaxy install -r requirements.yml
 #
-#      - name: Test the playbook's syntax.
-#        run: ansible-playbook main.yml --syntax-check
-#
-#      - name: Test the playbook.
-#        run: ansible-playbook main.yml
-#        env:
-#          ANSIBLE_FORCE_COLOR: '1'
+      - name: Test the playbook's syntax.
+        run: ansible-playbook playbook.yaml --syntax-check
+
+      - name: Test the playbook.
+        run: ansible-playbook playbook.yaml
+        env:
+          ANSIBLE_FORCE_COLOR: '1'
 #
 #      - name: Idempotence check.
 #        run: |
