--- a/roles/homebrew/tasks/main.yaml
+++ b/roles/homebrew/tasks/main.yaml
@@ -1,13 +1,13 @@
 ---
 - name: Check CPU chip architecture for arm64 or x86_64
-  command: /usr/bin/uname -m 
+  command: /usr/bin/uname -m
   register: cpu_arch_output
 
 - name: Display CPU architecture
   debug:
     var: cpu_arch_output.stdout
 
-- name: Ensuring Homebrew is installed on x86 
+- name: Ensuring Homebrew is installed on x86
   stat:
     path: /usr/local/bin/brew
   register: homebrew_check_x86
@@ -20,13 +20,26 @@
 # On ARM macOS, this script installs to /opt/homebrew only
 # On Intel macOS, this script installs to /usr/local only
 - name: Installing Homebrew
-  shell: /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+  command: |
+    /usr/bin/ruby -e "$(curl -fsSL 
+    https://raw.githubusercontent.com/Homebrew/install/master/install)"
   when:
-    - not homebrew_check_x86.stat.exists
-    - 'x86_64' in cpu_arch_output.stdout
+    - "not homebrew_check_x86.stat.exists"
+    - "'x86_64' in cpu_arch_output.stdout"
 
 - name: Installing Homebrew
-  shell: /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+  command: |
+    /usr/bin/ruby -e "$(curl -fsSL 
+    https://raw.githubusercontent.com/Homebrew/install/master/install)"
   when:
-    - not homebrew_check_arm.stat.exists
-    - 'arm64' in cpu_arch_output.stdout
+    - "not homebrew_check_arm.stat.exists"
+    - "'arm64' in cpu_arch_output.stdout"
+
+- name: Run 'which brew' command
+  changed_when: False
+  ansible.builtin.command: which brew
+  register: which_brew
+
+- name: Check where 'brew' is installed
+  ansible.builtin.debug:
+    msg: "'brew' is installed to: {{ which_brew.stdout }}"
