--- a/roles/homebrew/tasks/main.yaml
+++ b/roles/homebrew/tasks/main.yaml
@@ -1,26 +1,26 @@
 ---
 - name: Check CPU chip architecture for arm64 or x86_64
-  command: /usr/bin/uname -m
+  ansible.builtin.command: /usr/bin/uname -m
   register: cpu_arch_output
 
 - name: Display CPU architecture
-  debug:
+  ansible.builtin.debug:
     var: cpu_arch_output.stdout
 
 - name: Ensuring Homebrew is installed on x86
-  stat:
+  ansible.builtin.stat:
     path: /usr/local/bin/brew
   register: homebrew_check_x86
 
 - name: Ensuring Homebrew is installed on arm
-  stat:
+  ansible.builtin.stat:
     path: /opt/homebrew/bin/brew
   register: homebrew_check_arm
 
 # On ARM macOS, this script installs to /opt/homebrew only
 # On Intel macOS, this script installs to /usr/local only
 - name: Installing Homebrew
-  command: >-
+  ansible.builtin.command: >-
     /usr/bin/ruby -e "$(curl -fsSL\
     https://raw.githubusercontent.com/Homebrew/install/master/install)"
   when:
@@ -28,7 +28,7 @@
     - "'x86_64' in cpu_arch_output.stdout"
 
 - name: Installing Homebrew
-  command: |
+  ansible.builtin.command: |
     /usr/bin/ruby -e "$(curl -fsSL\
     https://raw.githubusercontent.com/Homebrew/install/master/install)"
   when:
