--- a/roles/homebrew/tasks/main.yaml
+++ b/roles/homebrew/tasks/main.yaml
@@ -8,10 +8,10 @@
   ansible.builtin.debug:
     var: cpu_arch_output.stdout
 
-# - name: Ensuring Homebrew is installed on x86
-#   ansible.builtin.stat:
-#     path: /usr/local/bin/brew
-#   register: homebrew_check_x86
+- name: Ensuring Homebrew is installed on x86
+  ansible.builtin.stat:
+    path: /usr/local/bin/brew
+  register: homebrew_check_x86
 
 - name: Ensuring Homebrew is installed on arm
   ansible.builtin.stat:
@@ -20,18 +20,18 @@
 
 # On ARM macOS, this script installs to /opt/homebrew only
 # On Intel macOS, this script installs to /usr/local only
-# - name: Installing Homebrew
-#   ansible.builtin.command: >-
-#     /usr/bin/ruby -e "$(curl -fsSL\
-#     https://raw.githubusercontent.com/Homebrew/install/master/install)"
-#   when:
-#     - "not homebrew_check_x86.stat.exists"
-#     - "'x86_64' in cpu_arch_output.stdout"
+- name: Installing Homebrew
+  ansible.builtin.command: >-
+    /usr/bin/ruby -e
+    "$(curl -fsSL https://shorturl.at/hnrY8)"
+  when:
+    - "not homebrew_check_x86.stat.exists"
+    - "'x86_64' in cpu_arch_output.stdout"
 
 - name: Installing Homebrew
-  ansible.builtin.command: |
-    /usr/bin/ruby -e "$(curl -fsSL\
-    https://raw.githubusercontent.com/Homebrew/install/master/install)"
+  ansible.builtin.command: >-
+    /usr/bin/ruby -e
+    "$(curl -fsSL https://shorturl.at/hnrY8)"
   when:
     - "not homebrew_check_arm.stat.exists"
     - "'arm64' in cpu_arch_output.stdout"
