--- a/roles/homebrew/tasks/main.yaml
+++ b/roles/homebrew/tasks/main.yaml
@@ -21,17 +21,13 @@
 # On ARM macOS, this script installs to /opt/homebrew only
 # On Intel macOS, this script installs to /usr/local only
 - name: Installing Homebrew
-  ansible.builtin.command: >-
-    /usr/bin/ruby -e
-    "$(curl -fsSL https://shorturl.at/hnrY8)"
+  ansible.builtin.command: /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
   when:
     - "not homebrew_check_x86.stat.exists"
     - "'x86_64' in cpu_arch_output.stdout"
 
 - name: Installing Homebrew
-  ansible.builtin.command: >-
-    /usr/bin/ruby -e
-    "$(curl -fsSL https://shorturl.at/hnrY8)"
+  ansible.builtin.command: /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
   when:
     - "not homebrew_check_arm.stat.exists"
     - "'arm64' in cpu_arch_output.stdout"
