--- a/playbook.yaml
+++ b/playbook.yaml
@@ -3,6 +3,7 @@
   hosts: localhost
   connection: local
   vars_files:
+    - vars/hardware_settings.yaml
     - vars/shell_packages.yaml
   roles:
     - homebrew
