--- a/roles/homebrew/tasks/main.yaml
+++ b/roles/homebrew/tasks/main.yaml
@@ -8,35 +8,35 @@
   ansible.builtin.debug:
     var: cpu_arch_output.stdout
 
-- name: Ensuring Homebrew is installed on x86
+- name: Set CPU architecture variable
+  ansible.builtin.set_fact:
+    cpu_arch: '{{ cpu_arch_output.stdout }}'
+  when: "'x86_64' in cpu_arch_output.stdout"
+
+- name: Check if Homebrew is installed on x86_64
   ansible.builtin.stat:
     path: /usr/local/bin/brew
-  register: homebrew_check_x86
+  register: homebrew_check
+  when: cpu_arch == 'x86_64'
 
-- name: Ensuring Homebrew is installed on arm
+- name: Check if Homebrew is installed on arm64
   ansible.builtin.stat:
     path: /opt/homebrew/bin/brew
-  register: homebrew_check_arm
+  register: homebrew_check
+  when: cpu_arch == 'arm64'
 
 # On ARM macOS, this script installs to /opt/homebrew only
 # On Intel macOS, this script installs to /usr/local only
 - name: Installing Homebrew
-  ansible.builtin.command: /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+  ansible.builtin.command: '/usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"'
   when:
-    - "not homebrew_check_x86.stat.exists"
-    - "'x86_64' in cpu_arch_output.stdout"
-
-- name: Installing Homebrew
-  ansible.builtin.command: /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
-  when:
-    - "not homebrew_check_arm.stat.exists"
-    - "'arm64' in cpu_arch_output.stdout"
+    - "not homebrew_check.stat.exists"
 
 - name: Run 'which brew' command
   changed_when: false
   ansible.builtin.command: which brew
   register: which_brew
 
-- name: Check where 'brew' is installed
+- name: Display where 'brew' is installed
   ansible.builtin.debug:
     msg: "'brew' is installed to: {{ which_brew.stdout }}"
