Fixing shell and allowing matrix CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
       matrix:
         os:
           - macos-12  # monterey
-          # - macos-13  # ventura
+          - macos-13  # ventura
           # - macos-14  # sonoma
 
     steps:
