--- a/roles/shell/tasks/main.yaml
+++ b/roles/shell/tasks/main.yaml
@@ -17,7 +17,11 @@
     state: present
   register: result
   until: result is successful
-  when: "not (homebrew_check_x86_64.stat.exists | default(false) or homebrew_check_arm64.stat.exists | default(false))"
+  when: "(homebrew_check_x86_64.stat.exists | default(false) or homebrew_check_arm64.stat.exists | default(false))"
+
+- name: Display Homebrew Packages result
+  ansible.builtin.debug:
+    msg: "{{ result.stdout }}"
 
 - name: Installing Homebrew Cask Packages
   community.general.homebrew_cask:
@@ -25,4 +29,8 @@
     state: present
   register: result
   until: result is successful
-  when: "not (homebrew_check_x86_64.stat.exists | default(false) and homebrew_check_arm64.stat.exists | default(false))"
+  when: "(homebrew_check_x86_64.stat.exists | default(false) or homebrew_check_arm64.stat.exists | default(false))"
+
+- name: Display Homebrew Cask Packages result
+  ansible.builtin.debug:
+    msg: "{{ result.stdout }}"
