--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
         os:
           - macos-12  # monterey
           - macos-13  # ventura
-          # - macos-14  # sonoma
+          - macos-14  # sonoma
 
     steps:
       - name: Check out the codebase.
