Add dev and zsh role
Matrix CI was reduced to only 1 OS during active development

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,8 @@ jobs:
       matrix:
         os:
           - macos-12  # monterey
-          - macos-13  # ventura
-          - macos-14  # sonoma
+          # - macos-13  # ventura
+          # - macos-14  # sonoma
 
     steps:
       - name: Check out the codebase.
