--- a/roles/openshift/tasks/main.yaml
+++ b/roles/openshift/tasks/main.yaml
@@ -1,28 +1,6 @@
 ---
-- name: Check if Homebrew is installed on x86_64
-  ansible.builtin.stat:
-    path: /usr/local/bin/brew
-  register: homebrew_check_x86_64
-  when: cpu_arch == 'x86_64'
-
-- name: Check if Homebrew is installed on arm64
-  ansible.builtin.stat:
-    path: /opt/homebrew/bin/brew
-  register: homebrew_check_arm64
-  when: cpu_arch == 'arm64'
-
-- name: Install openshift components for macOS
-  community.general.homebrew:
-    name: "{{ item }}"
-    state: present
-  with_items:
-    - podman
-    - openshift-cli
-    - butane
-  register: result
-  until: result is successful
-  when: "(homebrew_check_x86_64.stat.exists | default(false) or homebrew_check_arm64.stat.exists | default(false))"
-
-- name: Display Homebrew Packages result
-  ansible.builtin.debug:
-    msg: "{{ result }}"
+- include_tasks: homebrew_check.yaml
+- include_tasks: openshift-cli.yaml
+# - include_tasks: oc-mirror.yaml
+- include_tasks: podman.yaml
+- include_tasks: butane.yaml
