Update oc-mirror to not require handlers
The current implementation of oc-mirror in the openshift role fails on ansible-lint. This is due to the fact, that the download relied on oc_mirror_download_bundle.changed, which should be used with handlers. To avoid this issue and have a simple codebase, the condition was changed to having the variable defined.

--- a/roles/openshift/tasks/oc-mirror.yaml
+++ b/roles/openshift/tasks/oc-mirror.yaml
@@ -24,7 +24,7 @@
   when: "not oc_mirror_file_stat.stat.exists"
 
 - name: Extract oc-linux.tar.gz into /tmp/
-  when: oc_mirror_download_bundle.changed
+  when: oc_mirror_download_bundle is defined
   become: true
   ansible.builtin.unarchive:
     src: /tmp/oc-mirror.tar.gz
@@ -35,7 +35,7 @@
     remote_src: true
 
 - name: Remove file /tmp/oc-mirror.tar.gz
-  when: oc_mirror_download_bundle.changed
+  when: oc_mirror_download_bundle is defined
   ansible.builtin.file:
     path: /tmp/oc-mirror.tar.gz
     state: absent
