--- a/roles/openshift/tasks/oc-mirror.yaml
+++ b/roles/openshift/tasks/oc-mirror.yaml
@@ -31,7 +31,7 @@
     owner: root
     group: root
     mode: '0755'
-    remote_src: true
+    remote_src: false
 
 - name: Remove file /tmp/oc-mirror.tar.gz
   when: oc_mirror_download_bundle is defined
