--- a/roles/openshift/tasks/oc-mirror.yaml
+++ b/roles/openshift/tasks/oc-mirror.yaml
@@ -25,12 +25,11 @@
 
 - name: Extract oc-linux.tar.gz into /tmp/
   when: oc_mirror_download_bundle is defined
-  become: true
   ansible.builtin.unarchive:
     src: /tmp/oc-mirror.tar.gz
     dest: /usr/local/bin
-    owner: root
-    group: root
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
     mode: '0755'
     remote_src: true
 
