--- a/roles/openshift/tasks/oc-mirror.yaml
+++ b/roles/openshift/tasks/oc-mirror.yaml
@@ -28,8 +28,8 @@
   ansible.builtin.unarchive:
     src: /tmp/oc-mirror.tar.gz
     dest: /usr/local/bin
-    owner: "{{ ansible_user }}"
-    group: "{{ ansible_user }}"
+    owner: "{{ ansible_env.USER }}"   # cannot use {{ ansible_user }} for localhost
+    group: "{{ ansible_env.USER }}"   # cannot use {{ ansible_user }} for localhost
     mode: '0755'
     remote_src: true
 
