--- a/roles/homebrew/tasks/main.yaml
+++ b/roles/homebrew/tasks/main.yaml
@@ -47,7 +47,7 @@
   ansible.builtin.debug:
     msg: "{{ brew_install.stdout }}"
 
-- name: Add Homebrew to path on arm64
+- name: Add Homebrew to PATH on arm64
   ansible.builtin.shell: |
     HOMEBREW_PREFIX="/opt/homebrew"
     case "${SHELL}" in
@@ -67,9 +67,9 @@
 
     (echo; echo 'eval "\$(${HOMEBREW_PREFIX}/bin/brew shellenv)"') >> ${shell_rcfile}
     eval "\$(${HOMEBREW_PREFIX}/bin/brew shellenv)"
-  when: brew_install.changed and homebrew_check_arm64.stat.exists
+  when: brew_install.changed and homebrew_check_arm64.stat.exists | default(false)
 
-- name: Add Homebrew to path on x86_64
+- name: Add Homebrew to PATH on x86_64
   ansible.builtin.shell: |
     HOMEBREW_PREFIX="/usr/local"
     case "${SHELL}" in
@@ -89,7 +89,7 @@
 
     (echo; echo 'eval "\$(${HOMEBREW_PREFIX}/bin/brew shellenv)"') >> ${shell_rcfile}
     eval "\$(${HOMEBREW_PREFIX}/bin/brew shellenv)"
-  when: brew_install.changed and homebrew_check_x86_64.stat.exists
+  when: brew_install.changed and homebrew_check_x86_64.stat.exists | default(false)
 
 - name: Run 'which brew' command
   changed_when: false
