--- a/roles/openshift/tasks/oc-mirror.yaml
+++ b/roles/openshift/tasks/oc-mirror.yaml
@@ -24,18 +24,18 @@
   when: "not oc_mirror_file_stat.stat.exists"
 
 - name: Extract oc-linux.tar.gz into /tmp/
-  when: oc_mirror_download_bundle is defined
+  when: oc_mirror_download_bundle.changed
   become: true
   ansible.builtin.unarchive:
     src: /tmp/oc-mirror.tar.gz
     dest: /usr/local/bin
     owner: root
-    group: admin
+    group: wheel
     mode: '0755'
     remote_src: true
 
 - name: Remove file /tmp/oc-mirror.tar.gz
-  when: oc_mirror_download_bundle is defined
+  when: oc_mirror_download_bundle.changed
   ansible.builtin.file:
     path: /tmp/oc-mirror.tar.gz
     state: absent
