--- a/roles/zsh/tasks/main.yaml
+++ b/roles/zsh/tasks/main.yaml
@@ -1,27 +1,5 @@
 ---
-- name: Check if Homebrew is installed on x86_64
-  ansible.builtin.stat:
-    path: /usr/local/bin/brew
-  register: homebrew_check_x86_64
-  when: cpu_arch == 'x86_64'
-
-- name: Check if Homebrew is installed on arm64
-  ansible.builtin.stat:
-    path: /opt/homebrew/bin/brew
-  register: homebrew_check_arm64
-  when: cpu_arch == 'arm64'
-
-- name: Install zsh for macOS
-  community.general.homebrew:
-    name: "{{ item }}"
-    state: present
-  with_items:
-    - zsh
-    - zsh-syntax-highlighting
-  register: result
-  until: result is successful
-  when: "(homebrew_check_x86_64.stat.exists | default(false) or homebrew_check_arm64.stat.exists | default(false))"
-
-- name: Display Homebrew Packages result
-  ansible.builtin.debug:
-    msg: "{{ result }}"
+- include_tasks: homebrew_check.yaml
+- include_tasks: zsh.yaml
+- include_tasks: oh-my-zsh.yaml
+- include_tasks: powerlevel10k.yaml
