--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,9 +41,9 @@ jobs:
     strategy:
       matrix:
         os:
-          - macos-12  # monterey
+          # - macos-12  # monterey
           - macos-13  # ventura
-          # - macos-14  # sonoma
+          - macos-14  # sonoma
 
     steps:
       - name: Check out the codebase.
